2010-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/42645
	* tree-inline.c (processing_debug_stmt): Move earlier.  Make static.
	(remap_ssa_name): If processing_debug_stmt and name wasn't found in
	decl_map, set processing_debug_stmt to -1 and return name without
	any remapping.

2010-01-11  Dave Korn  <dave.korn.cygwin@gmail.com>

	* doc/install.texi (Specific#x-x-cygwin): Document minimum required
	binutils version, and reword target configuration description.

2010-01-11  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* config/avr/avr.h (LINKER_NAME): Remove. 

2010-01-11  Janis Johnson  <janis187@us.ibm.com>

	PR target/42416
	* config/rs6000/rs6000.c (rs6000_override_options): On targets
	that support VSX, warn for -mno-altivec if vsx is not disabled,
	and disable vsx.

2010-01-11  Joseph Myers  <joseph@codesourcery.com>
	    Shujing Zhao  <pearly.zhao@oracle.com>
	
	PR translation/42469
	* common.opt (Wframe-larger-than=, fcompare-debug=, fdbg-cnt=,
	fira-verbose=, flto-compression-level=, fplugin-arg-): Use tab
	character between option name and help text.
	* c.opt (imultilib): Likewise.

2010-01-10  Rafael Avila de Espindola  <espindola@google.com>

	* lto-streamer-out.c (output_unreferenced_globals): Output static
	variables.

2010-01-10  Steven Bosscher  <steven@gcc.gnu.org>

	PR rtl-optimization/42621
	* bb-reorder.c (gate_duplicated_computed_gotos): Only run if not
	optimizing for size.
	(duplicate_computed_gotos): Remove now-redundant check.

2010-01-10  Steve Ellcey  <sje@cup.hp.com>

	PR target/37454
	* configure.ac: Save and restore LDFLAGS and LIBS
	* configure: Regenerate.

2010-01-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42667
	* builtins.c (fold_builtin_strlen): Add type argument and
	convert the resulting length to it.
	(fold_builtin_1): Adjust.

2010-01-09  Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/rs6000.c (rs6000_emit_set_long_const): Shorten